@@ -1,5 +1,11 @@
 2011-08-10  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
+	* change default colors
+	* show current menu item
+	* improve help
+
+2011-08-10  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
 	* improve makefile and configure
 
 2011-08-06  Hendrik Tews  <tews@os.inf.tu-dresden.de>
